@@ -77,6 +77,7 @@ Open Vehicle Monitor System v3 - Change log
     can [can1…4] reset                -- reset the CAN interface
 - Vehicle: add support for custom command handlers, see…
   https://docs.openvehicles.com/en/latest/userguide/scripting.html#ovmsvehicle-command-plugins
+ - Add button on web file editor to reload ECU (when ECU is enabled).
 
 
 2022-09-01 MWJ  3.3.003  OTA release
